# tourmanique-api

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  application.py  docker-compose.local.yml  docker-compose.yml  pg_ctl.sh  pyproject.toml  test-guideline-api.md
.github/workflows/: dev-deploy.yml
ci/: values-custom.yaml
migrations/versions/: 1e0e815b1a79_correct_gallery_table.py  2015f17d536d_add_uniqueness_to_photo.py  2736a57227cf_fix_photo_emotion_table_columns.py  27eed96405ee_add_gallery_table.py  3073e2c41eb6_add_date_of_upload_to_photo_s_table.py  3f1c043f5fe9_fix_photo_color_relationship.py  4051e0c243bb_fix_nullable_hash.py  4f50b780a20a_add_uniqueness_to_the_photo.py  5b6c86fbb296_add_photo_associations.py  b0ef77c130de_add_photo_table.py
picachu/: config.py
picachu/config/: config_provider.py  flask_config.py  jwt_config.py  s3_config.py
picachu/domain/: __init__.py  dal.py
picachu/domain/association_tables/: association_tables.py
picachu/domain/associations/: associations.py
picachu/domain/data_access_layer/: build_connection_string.py  db.py  engine.py  session.py
picachu/domain/emotions/: emotion.py
picachu/domain/galleries/: galleries.py
picachu/domain/objects/: object.py
picachu/domain/photo_color/: photo_color.py
picachu/domain/photos/: photo.py
picachu/helpers/: s3_helper.py  validate_json_helper.py
picachu/helpers/rabbitmq_message_publisher/: rabbitmq_message_publisher.py
picachu/infrastructure/rabbitmq/: rabbitmq_config_provider.py  rabbitmq_consumer.py
picachu/modules/auth/: auth_routes.py  is_user_has_access.py
picachu/modules/galleries/: galleries_routers.py
picachu/modules/labels/: labels_routes.py
picachu/modules/photos/: photo_preprocessing.py  photos_routes.py
picachu/requests_consumer/: requests_consumer.py
picachu/requests_consumer/commands/: process_photo_request_command.py  send_model_request_command.py
picachu/results_consumer/: results_consumer.py
picachu/results_consumer/commands/: append_results_command.py
picachu/tests/: conftest.py
tourmanique/config/: auth_config.py  config_provider.py  rabbitmq_config.py
tourmanique/domain/: __init__.py
tourmanique/helpers/: s3_helper.py  s3_paths.py  url_helper.py
tourmanique/tests/: conftest.py
(+59 files in other folders)
